// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text-Editor Component Will render default props 1`] = `
<div
  className="text-editor-container d-flex flex-column"
>
  <div
    className="p-3"
  >
    <Quill
      modules={Object {}}
      onChange={[Function]}
      theme="bubble"
      value="<p>Hello <strong>Beautiful</strong>,</p><p><br></p><p>I hope your day is going well!</p><p> </p><p><br></p>"
    />
  </div>
  <small
    className="text-muted mx-auto mt-auto pb-2"
  >
    Select text to view formatting
  </small>
</div>
`;

exports[`Text-Editor Component Will render with value passed as prop 1`] = `
<div
  className="text-editor-container d-flex flex-column"
>
  <div
    className="p-3"
  >
    <Quill
      modules={Object {}}
      onChange={[Function]}
      theme="bubble"
      value="<p>testing 123</p>"
    />
  </div>
  <small
    className="text-muted mx-auto mt-auto pb-2"
  >
    Select text to view formatting
  </small>
</div>
`;
